[package]
name = "histogram"
version = "0.1.0"
edition = "2021"
authors = ["magnetophon <bart@magnetophon.nl>"]
license = "AGPL-3.0"
homepage = "magnetophon.nl"
description = "An exponentially decaying histogram"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vizia = {git = "https://github.com/vizia/vizia"}
